[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "warden-ai"
version = "1.4.0"
description = "AI Agent Governance Scanner — local-only CLI that scores governance posture across 17 dimensions"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "SharkRouter", email = "security@sharkrouter.ai"},
]
keywords = ["ai", "governance", "security", "agent", "scanner", "mcp", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "click>=8.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-timeout>=2.0",
]

[project.scripts]
warden = "warden.cli:main"

[project.urls]
Homepage = "https://github.com/SharkRouter/warden"
Documentation = "https://github.com/SharkRouter/warden#readme"
Repository = "https://github.com/SharkRouter/warden"
Issues = "https://github.com/SharkRouter/warden/issues"
Changelog = "https://github.com/SharkRouter/warden/releases"

[tool.hatch.build.targets.wheel]
packages = ["warden"]

[tool.pytest.ini_options]
testpaths = ["tests"]
timeout = 30

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.lint.per-file-ignores]
"warden/report/html_writer.py" = ["E501"]
